--- a/manifest.json
+++ b/manifest.json
@@ -17,7 +17,7 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["content-script.js"]
+      "js": ["content-script.js", "./websites/youtube.js"]
     }
   ],
   "permissions": ["tabs"]
