--- a/.github/workflows/draft_release.yml
+++ b/.github/workflows/draft_release.yml
@@ -21,6 +21,9 @@ jobs:
         with:
           node-version: 18
 
+      - name: Setup Git user
+        uses: fregante/setup-git-user@v2.0.1
+
       - name: Bump version
         run: npm version ${{github.event.inputs.version}}
 
