--- a/src/manifest.json
+++ b/src/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 3,
   "name": "Artemis RGB",
   "description": "Provides an interface to Artemis for various Chrome APIs",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "icons": {
     "16": "images/icon-16.png",
     "32": "images/icon-32.png",
@@ -16,11 +16,19 @@
   },
   "content_scripts": [
     {
-      "matches": ["<all_urls>"],
-      "js": ["content-script.js", "./websites/youtube.js"]
+      "matches": [
+        "<all_urls>"
+      ],
+      "js": [
+        "content-script.js",
+        "./websites/youtube.js"
+      ]
     }
   ],
-  "permissions": ["tabs", "storage"],
+  "permissions": [
+    "tabs",
+    "storage"
+  ],
   "action": {
     "default_popup": "popup.html"
   }
